# bnns_training

./: CMakeLists.txt  README.md
include/bnns_training/: adam_optim.h  dense_layer.h  loss_layer.h  mlp.h  output_layer.h
src/: CMakeLists.txt  lib.c  mlp.c
tests/: CMakeLists.txt  testlib.cc
